--- a/tests/moabsim-compare.ipynb
+++ b/tests/moabsim-compare.ipynb
@@ -34,7 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from moabsim_old import MoabEnvOld\n",
-    "sys.path.append(os.getcwd() + '/..')\n",
+    "sys.path.append(os.getcwd() + '/../Baselines')\n",
     "from moab_env import MoabEnv"
    ]
   },
@@ -246,7 +246,7 @@
   "kernelspec": {
    "display_name": "pt",
    "language": "python",
-   "name": "pt"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -258,7 +258,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:00:33) \n[Clang 13.0.1 ]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "62a21e3da3cda2bb0a24da381e78bcf7d8abc6f3ca7e10986b2116493203b99b"
+   }
   }
  },
  "nbformat": 4,
